// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processes events in a specific month > buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes events in a specific month > estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progu}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progg}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: proge}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
}
`;

exports[`processes events in a specific month > inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "109" => {
      "cntr": 109,
      "inspType": "Insp1",
      "materialID": 90970213488014,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial8",
      "time": 2018-02-02T10:09:10.000Z,
      "workorder": "workj",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 90970213488014,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 90970213488014,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial8",
      "time": 2018-02-02T10:02:10.000Z,
      "workorder": "workj",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 90970213488014,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serial8",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workj",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 3511013293963017,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialJ",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "workM",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 3511013293963017,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 3511013293963017,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialJ",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "workM",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 3511013293963017,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialJ",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "workM",
    },
    "209" => {
      "cntr": 209,
      "inspType": "Insp1",
      "materialID": 5925594004642397,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialc",
      "time": 2018-01-31T10:03:10.000Z,
      "workorder": "workl",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 5925594004642397,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 5925594004642397,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialc",
      "time": 2018-01-31T09:56:10.000Z,
      "workorder": "workl",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 5925594004642397,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialc",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workl",
    },
  },
}
`;

exports[`processes events in a specific month > material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqh" => [
      5925594004642397,
    ],
    "uniqK" => [
      90970213488014,
    ],
    "uniqc" => [
      3511013293963017,
    ],
  },
  "matsById": Map {
    "90970213488014" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:10.000Z,
      "jobUnique": "uniqK",
      "last_event": 2018-02-02T10:09:10.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 90970213488014,
      "numProcesses": 4,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "3511013293963017" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqc",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 3511013293963017,
      "numProcesses": 0,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "5925594004642397" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:10.000Z,
      "jobUnique": "uniqh",
      "last_event": 2018-01-31T10:03:10.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 5925594004642397,
      "numProcesses": 4,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
  },
}
`;

exports[`processes events in a specific month > pallet cycles 1`] = `
Map {
  "222" => Map {
    "209" => {
      "active": -1,
      "cntr": 209,
      "x": 2018-01-31T09:56:10.000Z,
      "y": 44,
    },
    "109" => {
      "active": -1,
      "cntr": 109,
      "x": 2018-02-02T10:02:10.000Z,
      "y": 44,
    },
  },
  "111" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes events in a specific month > station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-01-06T09:45:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 4,
        "id": 3511013293963017,
        "numproc": 0,
        "part": "part222",
        "proc": 2,
        "serial": "serialJ",
        "uniq": "uniqc",
        "workorder": "workM",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "elapsedMinsPerMaterial": 18,
    "endTime": 2018-01-06T09:35:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 4,
        "id": 3511013293963017,
        "numproc": 0,
        "part": "part222",
        "proc": 2,
        "serial": "serialJ",
        "uniq": "uniqc",
        "workorder": "workM",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "proge",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-01-31T09:51:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 2,
        "id": 5925594004642397,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialc",
        "uniq": "uniqh",
        "workorder": "workl",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-01-06T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 4,
        "id": 3511013293963017,
        "numproc": 0,
        "part": "part222",
        "proc": 2,
        "serial": "serialJ",
        "uniq": "uniqc",
        "workorder": "workM",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "elapsedMinsPerMaterial": 24,
    "endTime": 2018-01-31T09:41:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 2,
        "id": 5925594004642397,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialc",
        "uniq": "uniqh",
        "workorder": "workl",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progu",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-02-02T09:57:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 9,
        "id": 90970213488014,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqK",
        "workorder": "workj",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-01-31T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 2,
        "id": 5925594004642397,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialc",
        "uniq": "uniqh",
        "workorder": "workl",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "elapsedMinsPerMaterial": 30,
    "endTime": 2018-02-02T09:47:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 9,
        "id": 90970213488014,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqK",
        "workorder": "workj",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progg",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-02-02T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 9,
        "id": 90970213488014,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqK",
        "workorder": "workj",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
}
`;

exports[`processes last 30 events > after filter - buffers 1`] = `
Map {
  "402" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > after filter - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: proga}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: MC, operation: progE}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > after filter - event counter 1`] = `408`;

exports[`processes last 30 events > after filter - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "408" => {
      "cntr": 408,
      "inspType": "Insp1",
      "materialID": 8327686480387028,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialH",
      "time": 2018-02-08T09:51:05.000Z,
      "workorder": "work0",
    },
    "407" => {
      "cntr": 407,
      "inspType": "Insp1",
      "materialID": 8327686480387028,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 8327686480387028,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialH",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "work0",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 6334762256135281,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial9",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "worki",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 6334762256135281,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6334762256135281,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial9",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "worki",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 6351644318800774,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialE",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workL",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 6351644318800774,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6351644318800774,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialE",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workL",
    },
  },
}
`;

exports[`processes last 30 events > after filter - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqU" => [
      8327686480387028,
    ],
    "uniqf" => [
      6351644318800774,
    ],
    "uniqP" => [
      6334762256135281,
    ],
  },
  "matsById": Map {
    "6351644318800774" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqf",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 6351644318800774,
      "numProcesses": 4,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "6334762256135281" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "completed_last_proc_machining": true,
      "jobUnique": "uniqP",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 6334762256135281,
      "numProcesses": 1,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "8327686480387028" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-08T09:51:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:05.000Z,
      "jobUnique": "uniqU",
      "last_event": 2018-02-08T09:51:05.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 8327686480387028,
      "numProcesses": 4,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > after filter - pallet cycles 1`] = `
Map {
  "222" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
  "333" => Map {
    "408" => {
      "active": -1,
      "cntr": 408,
      "x": 2018-02-08T09:44:05.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > after filter - station cycles 1`] = `
Map {
  "406" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 406,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-02-08T09:39:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 8327686480387028,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialH",
        "uniq": "uniqU",
        "workorder": "work0",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "404" => {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 404,
    "elapsedMinsPerMaterial": 12,
    "endTime": 2018-02-08T09:29:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 8327686480387028,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialH",
        "uniq": "uniqU",
        "workorder": "work0",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "prog6",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "400" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 400,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-02-08T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 8327686480387028,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialH",
        "uniq": "uniqU",
        "workorder": "work0",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-01-31T09:51:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "elapsedMinsPerMaterial": 24,
    "endTime": 2018-01-31T09:41:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "proga",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-02-02T09:57:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-01-31T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "elapsedMinsPerMaterial": 30,
    "endTime": 2018-02-02T09:47:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progR",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-02-02T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
}
`;

exports[`processes last 30 events > after filter - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.35,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "T",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "C",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: proga}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.36666666666666664,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "F",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.2833333333333333,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "N",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progE}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4166666666666667,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "F",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "k",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: proga}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: MC, operation: progE}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - event counter 1`] = `309`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 6334762256135281,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial9",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "worki",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 6334762256135281,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6334762256135281,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial9",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "worki",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 5691322462308984,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialz",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "work9",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 5691322462308984,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 5691322462308984,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialz",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "work9",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 5691322462308984,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialz",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "work9",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 6351644318800774,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialE",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workL",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 6351644318800774,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6351644318800774,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialE",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workL",
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqf" => [
      6351644318800774,
    ],
    "uniqx" => [
      5691322462308984,
    ],
    "uniqP" => [
      6334762256135281,
    ],
  },
  "matsById": Map {
    "6351644318800774" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqf",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 6351644318800774,
      "numProcesses": 4,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "5691322462308984" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqx",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 5691322462308984,
      "numProcesses": 4,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "6334762256135281" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "completed_last_proc_machining": true,
      "jobUnique": "uniqP",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 6334762256135281,
      "numProcesses": 1,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "222" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
  "111" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-01-06T09:45:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 5,
        "id": 5691322462308984,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialz",
        "uniq": "uniqx",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "elapsedMinsPerMaterial": 18,
    "endTime": 2018-01-06T09:35:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 5,
        "id": 5691322462308984,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialz",
        "uniq": "uniqx",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progE",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-01-31T09:51:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-01-06T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 5,
        "id": 5691322462308984,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialz",
        "uniq": "uniqx",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "elapsedMinsPerMaterial": 24,
    "endTime": 2018-01-31T09:41:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "proga",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "elapsedMinsPerMaterial": 3,
    "endTime": 2018-02-02T09:57:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-01-31T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 1,
        "id": 6351644318800774,
        "numproc": 4,
        "part": "part222",
        "proc": 1,
        "serial": "serialE",
        "uniq": "uniqf",
        "workorder": "workL",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "elapsedMinsPerMaterial": 30,
    "endTime": 2018-02-02T09:47:05.000Z,
    "isLabor": false,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progR",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "elapsedMinsPerMaterial": 6,
    "endTime": 2018-02-02T09:09:05.000Z,
    "isLabor": true,
    "isOutlier": false,
    "material": [
      {
        "face": 10,
        "id": 6334762256135281,
        "numproc": 1,
        "part": "part111",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqP",
        "workorder": "worki",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.35,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "T",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "C",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: proga}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.36666666666666664,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "F",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.2833333333333333,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "N",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progE}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4166666666666667,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "F",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "k",
        },
      ],
    },
  ],
}
`;
